# cc4023-il

./: .gitignore  Makefile  README.md  cc4023-il.cabal  flake.nix
app/: Main.hs  SECD2.hs
runtime/: Makefile  bytecode  sec.c  secd.c  secd.h
src/: Fun.hs  Lexer.x  Main.hs  Parser.y  SECD.hs  SECD1.hs  SECD2.hs  Test.hs
tests/: ClosureTests.hs  FactorialTests.hs  Main.hs  OptimizationTests.hs  ParserTests.hs  RecursionTests.hs  SimpleTests.hs  bugs.hs
tests/Interp/: interp.sh
tests/Other/: FactorialTests.hs  Main.hs
tests/Parser/: Main.hs
tests/SECD1/: Main.hs  OptimizationTests.hs
tests/SECD2/: ExecutionTests.hs  Main.hs  OptimizationTests.hs
