cabal-version:      2.4
name:               cc4023-il
version:            0.1.0.0
synopsis:           Example code for IL classes (CC4023)
description:        Interpreters and compilers for the FUN language
license:            MIT                                                   
author:             Pedro Vasconcelos
maintainer:         pbv@dcc.fc.up.pt
category:           education
extra-source-files: CHANGELOG.md

library SECD-lib
    exposed-modules:    SECD Fun Eval1 Eval2 Eval3 SECD1 SECD2
    other-modules:      Parser, Lexer
    build-depends:      base, containers, mtl, array
    hs-source-dirs:     src
    default-language:   Haskell2010
    build-tool-depends: alex:alex, happy:happy

executable SECD
    main-is:            Main.hs
    other-modules:      SECD, Fun, Lexer, Parser, SECD1
    build-tool-depends: alex:alex, happy:happy
    build-depends:      base, containers, array, mtl
    hs-source-dirs:     src
    default-language:   Haskell2010

test-suite tests
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    other-modules:      SimpleTests, ClosureTests, FactorialTests, RecursionTests
    build-depends:      base , HUnit ^>=1.6, SECD-lib
    hs-source-dirs:     tests
    default-language:   Haskell2010

