cabal-version:      2.4
name:               cc4023-il
version:            0.1.0.0
synopsis:           Example code for IL classes (CC4023)
description:        Interpreters and compilers for the FUN language
license:            MIT                                                   
author:             Pedro Vasconcelos
maintainer:         pbv@dcc.fc.up.pt
category:           education
extra-source-files: CHANGELOG.md

library SECD-lib
    exposed-modules:    SECD Fun Eval1 Eval2 Eval3 SECD1 SECD2
    other-modules:      Parser, Lexer
    build-depends:      base<4.20, containers, mtl, array
    hs-source-dirs:     src
    default-language:   Haskell2010
    build-tool-depends: alex:alex, happy:happy

executable SECD1
    main-is:            SECD1.hs
    build-tool-depends: alex:alex, happy:happy
    build-depends:      base<4.20, containers, exceptions ,array, mtl, haskeline,
                        SECD-lib
    hs-source-dirs:     app
    default-language:   Haskell2010
executable SECD2
    main-is:            SECD2.hs
    build-tool-depends: alex:alex, happy:happy
    build-depends:      base<4.20, containers, exceptions ,array, mtl, haskeline,
                        SECD-lib
    hs-source-dirs:     app
    default-language:   Haskell2010

test-suite Parser-Test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    other-modules:      ParserTests
    build-depends:      base<4.20 , HUnit ^>=1.6, SECD-lib
    hs-source-dirs:     tests/Parser
    default-language:   Haskell2010

test-suite SECD1-Test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    other-modules:      OptimizationTests, ExecutionTests
    build-depends:      base<4.20 , HUnit ^>=1.6, SECD-lib
    hs-source-dirs:     tests/SECD1
    default-language:   Haskell2010

test-suite SECD2-Test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    other-modules:      OptimizationTests, ExecutionTests
    build-depends:      base<4.20 , HUnit ^>=1.6, SECD-lib, containers,
    hs-source-dirs:     tests/SECD2
    default-language:   Haskell2010

test-suite Other-Test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    other-modules:      FactorialTests
    build-depends:      base<4.20 , HUnit ^>=1.6, SECD-lib
    hs-source-dirs:     tests/Other
    default-language:   Haskell2010
